tests/cases/pass/switch_basic.cs
class Program {
    static void Main() {
        int x = 2;
        switch (x) {
            case 1:
                Console.WriteLine(11);
                break;
            case 2:
                Console.WriteLine(22);
                break;
            default:
                Console.WriteLine(99);
                break;
        }
    }
}
