tests/cases/fail/ternary_non_bool_condition.cs
class Program {
    static void Main() {
        int x = ("hola") ? 1 : 2;
        Console.WriteLine(x);
    }
}
